--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-body {
-    font-size: 30pt;
-    margin-left: 100;
-    }
-li {
-    margin: 30px 0;
-    }
 a {
     text-decoration: none;
     color: black;
@@ -12,15 +5,35 @@ a {
 a:hover {
     color: blue;
     }
-table {
-	font-size: 40;
-	border: 2px solid black;
-	border-collapse: collapse;
+button {
+	font-size: 50;
 }
-td {
-	border: 2px solid black;
-	padding: 7px;
+button {
+	color: blue;
+	background-color: white;
+	border: 3px solid blue;
+	border-radius: 7px;
+	transition-duration: 0.8s;
+	font-family: courier new;
 }
-tr {
-	text-align: center;
+button:hover {
+	background-color: lightcyan;
+}
+button:active {
+	background-color: skyblue;
+	transition-duration: 0.1s;
+}
+textarea {
+	border: 1px solid blue;
+	border-radius: 10px;
+}
+select {
+	border: 1px solid blue;
+	border-radius: 5px;
+	font-size: 30pt;
+	font-family: courier new;
+}
+body {
+    font-size: 30pt;
+    margin-left: 100;
 }
