--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ textarea {
 	border: 1px solid blue;
 	border-radius: 10px;
 }
+input {
+	border: 1px solid blue;
+	border-radius: 10px;
+}
 select {
 	border: 1px solid blue;
 	border-radius: 5px;
